--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: calc(100vh - 60px);
 }
 
-.App-link {
-  color: #61dafb;
+#a_Row {
+  background: white;
+  flex-grow: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#b_Row {
+  background: #F9F9F9;
+  flex-grow: 1;
+}
+
+#c_Row {
+  background: white;
+  flex-grow: 3;
+}
+
+#header {
+  height: 60px;
+  box-shadow: 1px 1px 10px grey;
+  width: 100%;
+  position: relative;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+nav {
+  position: absolute;
+  z-index: 999999;
+}
+
+.burger {
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+#navigation {
+  background: rgb(194, 194, 194);
+  position: fixed;
+  width: 300px;
+  height: 100%;
+  left: 0;
+  top: 60px;
+}
+
+.navItem {
+ 
+}
+
+.navItem a {
+  text-decoration: none;
+  color: #5d5d5d;
+  padding: 20px;
+  display: block;
+}
+.navItem a:hover {
+  background: grey;
 }
