--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,15 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 0.5em;
+  width: 0.3em;
 }
 
 ::-webkit-scrollbar-track {
-  background: white
+  background: #454545
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #dae0e2;
+  background: #585858;
 }
 
 ul {
@@ -33,40 +33,36 @@ button {
   border: none;
   outline: none;
 }
+
 .row {
-  box-shadow: 1px 1px 10px #aaaaaa;
+  box-shadow: 1px 1px 10px #343434;
   height: 100vh;
   width: 300px;
   padding-top: 70px;
-  overflow-y: scroll;
+  background: #454545;
 }
 
 .a_row {
-  background: white;
-  box-shadow: 1px 1px 10px #aaaaaa;
   z-index: 999;
 }
 
 .b_row {
-  background: white;
-  box-shadow: 1px 1px 10px #aaaaaa;
   z-index: 99;
 }
 
 #c_Row {
-  background: white;
   flex-grow: 3;
 }
 
 #header {
   height: 60px;
-  box-shadow: 1px 1px 10px #bfbfbf;
+  box-shadow: 1px 1px 10px #272727;
   width: 100%;
   position: absolute;
   justify-content: space-between;
   padding: 10px;
   z-index: 9999;
-  background: #ffffff;
+  background: #454545;
 }
 
 nav {
@@ -109,8 +105,6 @@ nav {
 }
 
 .avatarSmall {
-  width: 50px;
-  height: 50px;
   background: grey;
   border-radius: 50%;
 }
@@ -138,8 +132,8 @@ nav {
   background: rgb(250, 250, 116);
   background-size: cover;
   background-image: url(./Images/noun_Scooter_1006120.png);
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
@@ -147,8 +141,8 @@ nav {
   background: rgb(148, 148, 80);
   background-size: cover;
   background-image: url(./Images/noun_Bike_1950231.png);
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
@@ -156,8 +150,8 @@ nav {
   background: rgb(252, 84, 84);
   background-size: cover;
   background-image: url(./Images/noun_e\ bike_1981529.png);
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
@@ -165,16 +159,15 @@ nav {
   background: rgb(172, 158, 211);
   background-image: url(./Images/noun_Car\ Blank_461761.png);
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 }
 
 .order__Title {
-  background: white;
+  background: #3e3d3d;
   padding: 10px;
   justify-content: space-between;
-  border: 1px solid #d6f4ff;
 }
 
 .order__id {
@@ -182,17 +175,19 @@ nav {
 }
 
 .orderBox {
-  background: #D6F4FF;
+  background: #515050;
   padding: 10px;
   font-size: 0.8em;
 }
 
 .order__List {
   padding: 20px;
+  overflow-y: scroll;
+  height: 80vh;
 }
 
 .route {
-  background: #d6f4ff;
+  background: #3e3d3d;
   padding: 10px;
   justify-content: space-between;
 }
@@ -212,15 +207,32 @@ button:focus {
 .delete {
   color: rgb(255, 66, 66);
   cursor: pointer;
-  text-align: center; 
+  text-align: center;
   border: none
 }
-
 
 .iconBox {
   padding: 5px;
 }
+
 .marker {
   font-size: 3em;
   color: red;
+}
+
+.driverBox {
+  width: 100%;
+  background: #454545;
+  height: 30vh;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.driversList {
+  padding: 0 10px;
+}
+
+.routeDetails {
+  background: #515050;
+  height: 50px;
 }
