--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 
 body {
   color: #929292;
+  overflow: hidden;
+  height: 100vh;
 }
 
 .bodyWrapper {
@@ -31,6 +33,9 @@ ul {
 .flex {
   display: flex;
 }
+.center {
+  justify-content: center;
+}
 
 .spaceBetween {
   justify-content: space-between;
@@ -45,18 +50,34 @@ button {
 .row {
   box-shadow: 1px 1px 10px #343434;
   height: 100vh;
-  width: 20%;
-  max-width: 300px;
-  padding-top: 70px;
   background: #454545;
+}
+
+.full_row {
+  width: 100%;
+  background-image: url(./Images/map_1.jpg);
+  background-size: cover;
+}
+
+.blur {
+  background-color: #6190afbf;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(5px);
 }
 
 .a_row {
   z-index: 999;
+  width: 20%;
+  max-width: 300px;
 }
 
 .b_row {
   z-index: 99;
+  width: 20%;
+  max-width: 300px;
 }
 
 #c_Row {
@@ -71,7 +92,6 @@ button {
   height: 60px;
   box-shadow: 1px 1px 10px #272727;
   width: 100%;
-  position: absolute;
   justify-content: space-between;
   padding: 10px;
   z-index: 9999;
@@ -86,7 +106,6 @@ nav {
 .fixMenu {
   position: fixed;
   width: 50px;
-  height: 100vh;
   top: 60px;
   left: 0;
   background: #2b2b2b;
@@ -145,11 +164,6 @@ nav {
   font-weight: bold;
   cursor: pointer;
   border: none;
-}
-
-#map {
-  width: 100%;
-  height: 400px;
 }
 
 .Motorbike {
@@ -270,14 +284,36 @@ button:focus {
 }
 
 .map-container {
+  height: 100%;
   width: 100%;
-  height: 70vh;
 }
 
 .marker {
-
   width: 24px;
   height: 24px;
   border-radius: 50%;
   cursor: pointer;
+}
+
+.mapboxgl-popup-close-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: 0;
+  border-radius: 0 3px 0 0;
+  cursor: pointer;
+  background-color: red;
+  padding: 5px;
+  color: white;
+}
+
+.loginBox {
+  padding: 20px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.margin10 {
+  margin: 10px;
 }
